--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ html{font-family:"Segoe UI",Arial,sans-serif;scroll-behavior:smooth;}
 .row::after{content:'';display:block;clear:both;}
 .mt-8{margin-top:8px !important;}
 .mt-16{margin-top:16px !important;}
-.mt-32{margin-top: 32px !important;}
+.mt-32{margin-top:32px !important;}
 .btn:hover{background:#ccc;color:#000;cursor:pointer;}
 .btn{display:inline-block;text-decoration:none;background-color:#000;color:#fff;padding:8px 16px;border:none;}
 .float-right{float:right !important;}
@@ -19,10 +19,10 @@ html{font-family:"Segoe UI",Arial,sans-serif;scroll-behavior:smooth;}
 /* !Header */
 header{position:fixed;top:0;left:0;right:0;height:46.5px;background-color:black;z-index:1;}
 header .mobile-menu-btn,header .search-btn{float:right;padding:0 24px;}
-header .mobile-menu-btn {position: absolute; top: 0; right: 0; display: none;}
+header .mobile-menu-btn{position:absolute;top:0;right:0;display:none;}
 header .search-btn:hover{background-color:#f44336;cursor:pointer;}
 header .mobile-menu-btn:hover{background-color:#ccc;}
-header .mobile-menu-btn:hover .menu-icon{color: #000;}
+header .mobile-menu-btn:hover .menu-icon{color:#000;}
 header .search-icon{color:#fff;font-size:14px;line-height:46px;}
 header .menu-icon{color:#fff;font-size:14px;line-height:46px;}
 /* !End Header */
@@ -40,10 +40,10 @@ nav #navsub a{min-width:160px;color:black;padding:0 12px;line-height:38px;}
 nav .nav-arrow-down{font-size:14px;}
 /* !End Nav */
 /* !Slider */
-#slider{position:relative;margin-top:46.5px;padding-top:50%;background:url(/assets/img/slider/chicago.jpg) top center / cover no-repeat;}
+#slider{position:relative;margin-top:46.5px;padding-top:50%;background:url('../img/slider/chicago.jpg') top center / cover no-repeat;}
 #slider .text-slider{position:absolute;color:#fff;bottom:32px;width:100%;text-align:center;}
 #slider .text-heading{font-weight:500;font-size:24px;}
-#slider .text-description{font-size:15px;margin-top:25px;}
+#slider .text-description{font-size:15px;margin-top:25px;text-shadow:0 0 1px #000;}
 /* !End Slider */
 /* !Main */
 /** Phần Chung */
@@ -66,7 +66,7 @@ main .tour-section{width:100%;color:#fff;background-color:black;}
 .places-list{margin-top:32px;}
 .places-item{width:calc(100% / 3);}
 .place-img{display:block;width:100%;}
-.place-img:hover{opacity: 0.5;}
+.place-img:hover{opacity:0.5;}
 .place-body{padding:16px;background-color:#fff;color:#000;font-size:15px;text-align:start;}
 .place-heading{font-weight:500;font-size:15px;padding-bottom:15px;}
 .place-time{color:#757575;padding-bottom:15px;}
@@ -74,8 +74,8 @@ main .tour-section{width:100%;color:#fff;background-color:black;}
 /** contact */
 .contact-content{margin-top:48px;text-align:start;}
 .contact-info{font-size:18px;line-height:1.5;}
-.contact-info a {color: #101aef; opacity: 0.8;}
-.contact-info a:hover {opacity: 1;}
+.contact-info a{color:#101aef;opacity:0.8;}
+.contact-info a:hover{opacity:1;}
 .contact-info i[class *= 'ti-']{width:30px;display:inline-block;}
 .contact-form{text-align:start;}
 .contact-form .from-control{border:1px solid #ccc;padding:10px;width:100%;}
